@@ -1,3 +1,11 @@
+2004-12-10  Frank Solensky  <frank@solensky.org>
+
+	reviewed by: Davyd Madeley <davyd@madeley.id.au>
+
+	* weather.c: (metar_init_re), (metar_parse): Modified again to
+	fix problems when fields (conditions, clouds) can repeat.
+	Move "conditions" earlier since it appear earlier
+
 2004-12-11  Simos Xenitellis  <simos@gnome.org>
 
 	* Locations.xml.in: Updated entries related to Greece.
